--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
+
 body {
     font-family: 'Roboto Slab', serif;
     margin: 0;
 }
+/* Section one properties*/
 .btn-style{
     display: inline-block;
     margin-top: 20px;
@@ -21,12 +23,12 @@ body {
     background-image: url(images/donation5.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    height: 700px;
+    height: 75vh;
 }
 .bg-opacity{
     background-image: linear-gradient(to right, rgba(2, 2, 2,.75), rgba(3, 3, 3, .95));
     background-size: cover;
-    height: 700px;
+    height: 75vh;
 }
 .slide-show-contents{
     width: 50%;
@@ -34,7 +36,7 @@ body {
     text-align: center;
     color: white;
     position: relative;
-    top: 40%;
+    top: 17vh;
     
 }
 .p-width{
@@ -42,3 +44,48 @@ body {
     font-size: 12px;
 }
 
+
+/* Section two properties*/
+
+.donate-content{
+    margin-top: 100px;
+    width: 50%;
+    margin: auto;
+    text-align: center;
+}
+.donate-content h1{
+    font-weight:bolder;
+    font-size: 35px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.amount{
+    display: flex;
+    margin: 50px 150px ;
+}
+.tk{
+    width: 50%;
+    height: 100px;
+    padding: 0 15px;
+    background-color: rgb(229, 234, 236);
+    margin: 10px;
+    border-radius: 5px;
+}
+.tk h2{
+    margin-top: 3.3vh;
+}
+
+#tk{
+    background-color: rgb(221, 199, 199);
+    border: 2px solid red;
+}
+.quotes{
+    margin-top: 100px;
+}
+.other-amount{
+    border: none;
+    border-bottom: 1px solid;
+    text-align: center;
+    width: 65%;
+    padding-bottom: 10px;
+    margin: 15px 40px;
+}
