--- a/style.css
+++ b/style.css
@@ -48,9 +48,8 @@ body {
 /* Section two properties*/
 
 .donate-content{
-    margin-top: 100px;
     width: 50%;
-    margin: auto;
+    margin: 100px auto;
     text-align: center;
 }
 .donate-content h1{
@@ -69,6 +68,8 @@ body {
     background-color: rgb(229, 234, 236);
     margin: 10px;
     border-radius: 5px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 900;
 }
 .tk h2{
     margin-top: 3.3vh;
@@ -88,4 +89,107 @@ body {
     width: 65%;
     padding-bottom: 10px;
     margin: 15px 40px;
+}
+
+/* Section three properties*/
+.donate-plan-content{
+    margin-top: 100px;
+    width: 50%;
+    margin: auto;
+    
+}
+.plan-quotes{
+    text-align: center;
+}
+.donate-plan-content h1{
+    font-weight:bolder;
+    font-size: 35px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+.plans{
+    display: flex;
+}
+.plans h3{
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: 900;
+}
+
+.plan{
+    width: 50%;
+    height: 230px;
+    padding: 40px 15px;
+    margin: 10px;
+    border-radius: 5px;
+}
+.icon{
+    width: 50px;
+    height: 50px;
+}
+#plan1{
+    background-color: rgb(191, 226, 240);
+}
+#plan2{
+    background-color: rgb(231, 202, 202);
+}
+#plan3{
+    background-color: rgb(240, 213, 191);
+}
+
+
+/*last section*/
+.subscibe{
+    width: 50%;
+    margin: 0 auto 100px;
+    text-align: center;
+    position: relative;
+}
+.subscibe h1{
+    font-weight:bolder;
+    font-size: 35px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.sub-pan{
+    border-radius: 5px;
+    width: 600px;
+    margin: 40px auto;
+    background-color: bisque;
+}
+.email{
+    border-top-left-radius: 5px;
+    border-bottom-left-radius: 5px;
+    padding: 7px;
+    border: none;
+    margin: 60px 0;
+    background-color: rgb(209, 202, 202);
+   
+}
+.button{
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    padding: 7px;
+    background-color: tomato;
+    border: none;
+}
+.sub-design{
+    border-radius: 5px;
+}
+
+
+
+/*Footer*/
+footer{
+    background-color: black;
+    height: 120px;
+    text-align: center;
+}
+
+.footer-h2{
+    font-family: 'Lobster', cursive;
+    padding-top: 30px;
+    color: rgb(167, 73, 56);
+}
+footer p{
+    font-size: 10px;
+    color: white;
 }
